conflict version